--- a/docs/contents/docs/getting-started/installation/index.mdx
+++ b/docs/contents/docs/getting-started/installation/index.mdx
@@ -1,19 +1,19 @@
 ---
 title: Installation
-description: Installation guide for PyKleene - A Python library for automata theory
+description: Installation guide for PYKLEENE - A Python library for automata theory
 ---
 
-To get started with PyKleene, follow these simple steps to set up the library in your Python environment.
+To get started with PYKLEENE, follow these simple steps to set up the library in your Python environment.
 
 ## Prerequisites
 
-Before installing PyKleene, make sure you have the following:
+Before installing PYKLEENE, make sure you have the following:
 - Python 3.8 or higher installed on your machine
 - pip package manager (usually comes with Python)
 - Virtual environment (recommended)
 
 <Note title="Remember" type="danger">
-  PyKleene requires Python 3.8+ due to its dependency on modern Python features.
+  PYKLEENE requires Python 3.8+ due to its dependency on modern Python features.
   Using older versions may result in compatibility issues or unexpected behavior.
 </Note>
 
@@ -25,7 +25,7 @@ python -m venv pykleene-env
 source pykleene-env/bin/activate  # On Windows: pykleene-env\Scripts\activate
 ```
 
-2. Install PyKleene using pip:
+2. Install PYKLEENE using pip:
 ```bash
 pip install pykleene
 ```
