--- a/docs/contents/docs/getting-started/introduction/index.mdx
+++ b/docs/contents/docs/getting-started/introduction/index.mdx
@@ -1,22 +1,22 @@
 ---
 title: Introduction
-description: An introduction to PyKleene - A comprehensive Python library for automata theory and formal languages
+description: An introduction to PYKLEENE - A comprehensive Python library for automata theory and formal languages
 ---
 
-PyKleene is a powerful Python library designed to make working with automata theory and formal languages accessible and intuitive. Whether you're a student learning theoretical computer science, a researcher working on language processing, or a developer implementing formal verification systems, PyKleene provides the tools you need to work with various types of automata and grammars.
+PYKLEENE is a powerful Python library designed to make working with automata theory and formal languages accessible and intuitive. Whether you're a student learning theoretical computer science, a researcher working on language processing, or a developer implementing formal verification systems, PYKLEENE provides the tools you need to work with various types of automata and grammars.
 
 ## Getting Started
 
-To begin using PyKleene, follow these simple steps:
-- Install PyKleene using pip: `pip install pykleene`
+To begin using PYKLEENE, follow these simple steps:
+- Install PYKLEENE using pip: `pip install pykleene`
 - Import the necessary components into your Python script
 - Start building and simulating automata!
 
-PyKleene supports a wide range of formal language concepts, from basic finite automata to complex Turing machines. The library is designed with both educational and practical applications in mind, featuring clear APIs and comprehensive documentation to help you get started quickly.
+PYKLEENE supports a wide range of formal language concepts, from basic finite automata to complex Turing machines. The library is designed with both educational and practical applications in mind, featuring clear APIs and comprehensive documentation to help you get started quickly.
 
 ## Key Features
 
-> "Automata theory is a fundamental pillar of computer science, and PyKleene aims to make these concepts tangible and practical through clean, intuitive Python implementations."
+> "Automata theory is a fundamental pillar of computer science, and PYKLEENE aims to make these concepts tangible and practical through clean, intuitive Python implementations."
 
 Our library includes support for:
 - Deterministic Finite Automata (DFA)
@@ -73,4 +73,4 @@ if __name__ == '__main__':
 
 ## Conclusion
 
-PyKleene strives to be your go-to library for working with formal languages and automata in Python. Whether you're teaching these concepts, learning them, or applying them in practice, our library provides the flexibility and functionality you need. Check out our other documentation sections to dive deeper into specific features and use cases.
+PYKLEENE strives to be your go-to library for working with formal languages and automata in Python. Whether you're teaching these concepts, learning them, or applying them in practice, our library provides the flexibility and functionality you need. Check out our other documentation sections to dive deeper into specific features and use cases.
