--- a/docs/contents/docs/state-machines/dfa/index.mdx
+++ b/docs/contents/docs/state-machines/dfa/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: DFA
-description: Deterministic Finite Automaton (DFA) class in PYKLEENE
+description: Deterministic Finite Automaton (DFA) class in pykleene 
 ---
 
 ```python showLineNumbers
@@ -11,7 +11,7 @@ startState: str
 finalStates: set[str]
 ```
 
-## init 
+## CONSTRUCTOR 
 Initialize a new Deterministic Finite Automaton with specified parameters.
 
 #### Parameters
