fix: code stubs not in Courier Prime

--- a/docs/contents/docs/getting-started/introduction/index.mdx
+++ b/docs/contents/docs/getting-started/introduction/index.mdx
@@ -28,7 +28,7 @@ Our library includes support for:
 
 ## Code Example
 
-Here's a simple example of creating a DFA that accepts strings ending with 'ab':
+Here's a simple example of checking the isomorphism of two DFAs: 
 
 ```python showLineNumbers
 from pykleene.dfa import DFA
