feat: change pda class, add accept functions to nfa and some changes to dfa

--- a/docs/contents/docs/state-machines/dfa/index.mdx
+++ b/docs/contents/docs/state-machines/dfa/index.mdx
@@ -62,6 +62,7 @@ Determine if a given string is accepted by the DFA.
 
 #### Parameters
 - `string`: Input string to be processed
+- `verbose`: Boolean to determine whether to print verbose output
 
 #### Return Value
 Boolean indicating whether the string is accepted by the DFA
