--- a/docs/contents/docs/state-machines/nfa/index.mdx
+++ b/docs/contents/docs/state-machines/nfa/index.mdx
@@ -55,6 +55,12 @@ None
 #### Return Value
 Boolean indicating whether the NFA configuration is valid
 
+## accepts
+Determine if a given string is accepted by the NFA.
+
+#### Parameters
+- `string`: Input string to be processed
+
 ## addTransition
 Add a new transition to the NFA.
 #### Parameters
