readme: update readme with the new intro

--- a/docs/contents/docs/getting-started/introduction/index.mdx
+++ b/docs/contents/docs/getting-started/introduction/index.mdx
@@ -8,6 +8,7 @@ Pykleene is a powerful Python library designed to make working with automata the
 ## Getting Started
 
 To begin using pykleene, follow these simple steps:
+- Make sure you have `Graphviz` installed on your system.
 - Install pykleene using pip: `pip install pykleene`
 - Import the necessary components into your Python script
 - Start building and simulating automata!
@@ -25,6 +26,7 @@ Our library includes support for:
 - Pushdown Automata
 - Linear Bounded Automata and Turing Machines
 - Various Grammar Types (Regular to Unrestricted)
+- Regular Expressions
 
 ## Code Example
 
